fix paginator flickering bug

--- a/scribe/src/app/core/notes/notes.component.scss
+++ b/scribe/src/app/core/notes/notes.component.scss
@@ -40,6 +40,7 @@
 }
 
 #all_notes_tiles {
+  height: 100%;
   padding: 0 0.2%;
 }
 
