--- a/scribe/src/app/core/trash/trash.component.scss
+++ b/scribe/src/app/core/trash/trash.component.scss
@@ -4,7 +4,10 @@
 
 .scribe-trash-container {
   position: relative;
-  padding-bottom: 5%;
+}
+
+#trash_main {
+  height: 100%;
 }
 
 #trash_heading {
@@ -83,3 +86,4 @@
   align-items: center;
   height: 50vh;
 }
+
